deploy on gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "samurai-way",
+  "homepage": "https://allbel.github.io/Social-network",
   "version": "0.1.0",
   "private": true,
   "homepage": "",
