--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "homepage": "https://allbel.github.io/Social-network",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
     "@testing-library/user-event": "13.2.1",
-    "antd": "4.18.7",
+    "antd": "^4.23.6",
     "axios": "0.26.0",
+    "caniuse-lite": "^1.0.30001423",
     "classnames": "2.3.1",
-    "formik": "2.2.9",
-    "gh-pages": "3.2.3",
+    "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "jest": "27.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
